@@ -1,0 +1,8 @@
+class <%= @job_class_name %> < ActiveJob::Base
+  def perform(shop_domain:, webhook:)
+    shop = Shop.find_by(shopify_domain: shop_domain)
+
+    shop.with_shopify_session do
+    end
+  end
+end
